# firecrawl

.github/workflows/: deploy-go-service.yaml  deploy-image.yml  deploy-playwright.yml
apps/api/: package.json  tsconfig.json
apps/api/native/: Cargo.toml  README.md
apps/api/native/src/document/: converter.rs  mod.rs
apps/api/native/src/document/providers/: docx.rs  factory.rs  mod.rs  odt.rs  (+1 more)
apps/api/src/: config.ts
apps/api/src/controllers/v1/: scrape.ts  search.ts  types.ts
apps/api/src/controllers/v2/: crawl.ts  scrape.ts  search.ts  x402-search.ts
apps/api/src/lib/: engpicker.ts
apps/api/src/lib/branding/: llm.ts  logo-selector.ts  merge.ts  processor.ts  prompt.ts  schema.ts  transformer.ts  types.ts
apps/api/src/routes/: admin.ts  v2.ts
apps/api/src/scraper/scrapeURL/: index.ts
apps/api/src/services/: extract-worker.ts  queue-jobs.ts  queue-worker.ts  sentry.ts
apps/api/src/services/billing/: auto_charge.ts
apps/api/src/services/indexing/: index-worker.ts
apps/api/src/services/logging/: log_job.ts
apps/api/src/services/webhook/: queue.ts
apps/api/src/services/worker/: nuq.ts  redis.ts  scrape-worker.ts  team-semaphore.ts
apps/js-sdk/firecrawl/: package.json
apps/js-sdk/firecrawl/src/v1/: index.ts
apps/js-sdk/firecrawl/src/v2/: types.ts
apps/playwright-service-ts/: README.md
apps/test-site/src/pages/branding/: complex.astro  dark-transparent.astro  no-logo.astro  png-logo.astro  svg-logo.astro
apps/webhook-dispatcher/: Cargo.toml  Dockerfile
apps/webhook-dispatcher/src/: consumer.rs  dispatcher.rs  main.rs  signature.rs
(+21 files in other folders)
