[package]
name = "webhook-dispatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
lapin = "2"
futures-lite = "2"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postgrest = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
dotenvy = "0.15"
